Fixed white space line in bottom of the main page.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+ height: 100%;
  font-family: "Work sans", sans-serif;
  font-size: 1rem;
  text-align: justify;
@@ -219,6 +220,7 @@ footer a:hover {
 
 footer > ul {
  list-style: none;
- padding: 0 1rem 1rem;
+ padding: 0 1rem;
  text-align: center;
+ display: inline-block;
 }
